2025-03-20T01:09:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13959831762 # 599
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-20
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 216 248 / 222 256
* notice: next accum: outdated-unq outdated-all / unq all: 216 248 / 223 257
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-03-06 2025-03-19]

2025-03-16T01:14:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13878437870 # 595
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-16
* notice: last 14d: unq all: 6 8
* notice: prev accum: outdated-unq outdated-all / unq all: 215 247 / 222 256
* notice: next accum: outdated-unq outdated-all / unq all: 216 248 / 222 256
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-03-01] / []

2025-03-12T01:08:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13801432750 # 591
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-12
* notice: last 14d: unq all: 7 9
* notice: prev accum: outdated-unq outdated-all / unq all: 215 247 / 221 255
* notice: next accum: outdated-unq outdated-all / unq all: 215 247 / 222 256
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-03-11]

2025-03-11T01:09:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13778112606 # 590